Image on github

--- a/AM1281.html
+++ b/AM1281.html
@@ -114,7 +114,7 @@
 			</div>
 			<div class="main">
 				<h2>Personal Profile</h2>
-				<p class="Description"><img src="AM1281.jpg" alt="Picture of Thomadakis Polikarpos"> I was born in Veria, Greece in 1992 and have lived there till the age of 18.I am currently studying at the Department of Electrical and Computer Engineering (ECE) of the University of Thessaly in Volos , Greece . Im at the 5th year of 
+				<p class="Description"><img src="https://raw.githubusercontent.com/AM1281/AM1281cv/master/AM1281.jpg" alt="Picture of Thomadakis Polikarpos"> I was born in Veria, Greece in 1992 and have lived there till the age of 18.I am currently studying at the Department of Electrical and Computer Engineering (ECE) of the University of Thessaly in Volos , Greece . Im at the 5th year of 
 				my studies and intend to graduate the next year. My interests include programming , networks and hardware of computers</p>
 				<h2>Education</h2>
 				<p class="Description">I finished school in 2010 in Veria<br/> I hope to graduate from  Department of Electrical and Computer Engineering (ECE) of the University of Thessaly,Volos,Greece in 2016 </p>
